--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:supportsRtl="true">
         <activity android:name=".component.MakeRoom" />
+        <activity android:name=".pay_page1" />
+        <activity android:name=".pay_page2"></activity>
         <activity android:name=".component.Home" />
         <activity android:name=".component.ShoppingBasket"></activity>
         <activity android:name=".MainActivity">
