Add(companyname) : 업장목록 연동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.junyoung.kiosk" >
+    package="com.junyoung.kiosk">
 
-    y<application
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".component.TotalMenuList"></activity>
+        <activity android:name=".component.adminMenu"></activity>
+        <activity android:name=".MainActivity2"></activity>
+
         <activity android:name=".component.MakeRoom" />
         <activity android:name=".pay_page1" />
-        <activity android:name=".pay_page2"></activity>
+        <activity android:name=".pay_page2" />
         <activity android:name=".component.Home" />
-        <activity android:name=".component.ShoppingBasket"></activity>
+        <activity android:name=".component.ShoppingBasket" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +25,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
